--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "xwz",
-  "appid": "H57F2ACE4",
+  "appid": "__UNI__40F3251",
   "description": "",
   "versionName": "1.0.0",
   "versionCode": "100",
