--- a/env/.env
+++ b/env/.env
@@ -7,7 +7,7 @@ VITE_WX_APPID = 'wxa2abb91f64032a2b'
 # h5部署网站的base，配置到 manifest.config.ts 里的 h5.router.base
 VITE_APP_PUBLIC_BASE=/xwz/
 
-VITE_SERVER_BASEURL = 'http://192.168.1.69:8848/v4.4'
+VITE_SERVER_BASEURL = 'http://8.210.189.37:80'
 VITE_UPLOAD_BASEURL = 'https://ukw0y1.laf.run/upload'
 
 # 有些同学可能需要在微信小程序里面根据 develop、trial、release 分别设置上传地址，参考代码如下。
