--- a/env/.env
+++ b/env/.env
@@ -1,11 +1,11 @@
-VITE_APP_TITLE = 'xwz'
+VITE_APP_TITLE = 'yl'
 VITE_APP_PORT = 9000
 
-VITE_UNI_APPID = '__UNI__40F3251'
+VITE_UNI_APPID = '__UNI__5F2330A'
 VITE_WX_APPID = 'wxa2abb91f64032a2b'
 
 # h5部署网站的base，配置到 manifest.config.ts 里的 h5.router.base
-VITE_APP_PUBLIC_BASE=/xwz/
+VITE_APP_PUBLIC_BASE=/yl/
 
 VITE_SERVER_BASEURL = 'http://8.210.189.37:80'
 VITE_UPLOAD_BASEURL = 'https://ukw0y1.laf.run/upload'
